--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Soundcloud Alarm Clock</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">LoginScreen</string>
     <string name="action_settings">Settings</string>
+    <string name="hello_world">SoundCloud Alarm Clock</string>
+    <string name="username">Username:</string>
+    <string name="password">Password:</string>
+    <string name="Login">Login</string>
+    <string name="attempts">Attempts Left:</string>
 
 </resources>
