--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="password">Password:</string>
     <string name="Login">Login</string>
     <string name="attempts">Attempts Left:</string>
+    <string name="title_activity_hub">HubActivity</string>
 
 </resources>
